--- a/index.html
+++ b/index.html
@@ -16,11 +16,25 @@
 
     <!-- Main Header Start -->
     <header>
+        <div class="Mob">
+            <input type="checkbox" id="click">
+            <nav>
+                <ul>
+                    <label for="click">
+                        <li class="nav-item"><i class="fa fa-angle-down"></i></li>
+                    </label>
+                    <li class="nav-item"><a href="#home"><i class="fa fa-home"></i></a></li>
+                    <li class="nav-item"><a href="#product"><i class="fa fa-list"></i></a></li>
+                    <li class="nav-item"><a href="#safety"><i class="fa fa-briefcase"></i></a></li>
+                    <li class="nav-item"><a href="#contact"><i class="fa fa-comments"></i></a></li>
+                </ul>
+            </nav>
+        </div>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <a class="navbar-brand" href="#"><img src="./image/img5.jpg" alt="Mask" class="MaskoMask">Mask-O-Mask</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> -->
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
